--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "prebuild": "node scripts/generate-sitemap.mjs",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
+  },
+  "engines": {
+    "node": ">=22.12.0 || ^20.19.0"
   },
   "dependencies": {
     "aos": "^2.3.4",
@@ -31,7 +35,6 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "vite": "^7.0.4",
-    "vite-plugin-sitemap": "^0.8.2"
+    "vite": "^7.0.4"
   }
 }
